--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,10 @@ body,
 :root {
   @apply h-[100%];
 }
+
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
+}
